--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=uCModules
 version=1.0
 author=Marshall Taylor
 maintainer=Marshall Taylor
-sentence=Expandable physical panel interface and tools for microcontrollers.
-paragraph=Create a panel containing panel components such as buttons, switches, LEDs, knobs, etc.   Use the timer classes to provide service intervals for the panel, and to user code.
+sentence=A system of modules for creating embedded programs
+paragraph=Create a panel containing panel components such as buttons, switches, LEDs, knobs, etc.   Use the timer classes to provide service intervals for the panel and to user code.  For Uno compatible and Teensy 3.1.  See examples
 category=Other
-url=https://github.com/marshalltaylorSFE/uCTools.git
+url=https://github.com/marshalltaylorSFE/uCModules.git
 architectures=*
